--- a/index.html
+++ b/index.html
@@ -1,37 +1,84 @@
-<!DOCTYPE html> <!-- Esto es HTML5 -->
-<!-- HTML: Idioma por pagina -->
+<!DOCTYPE html>
 <html lang="es">
-	<!-- Etiquetas necesarias que no son contenido -->
 	<head>
-		<!-- Atributo: codificación -->
 		<meta charset="utf-8" />
-		<!-- Titulo de la pagina: entre 60 a 70 caracteres -->
 		<title>Frontend: esta es la pagina principal</title>
-		<!-- Descripción: entre 155 a 160 caracteres -->
 		<meta name="description" content="Curso de Frontend online" />
-		<!-- Keywords: entre 300 caracteres -->
 		<meta name="keywords" content="html, css, backbone, django, node" />
+		<!-- Hoja de estilos para normalizar los estilos -->
+		<link type='text/css' rel='stylesheet' href='normalize.css'>
+		<!-- Hoja de estilos en un link -->
+		<link type='text/css' rel='stylesheet' href='style.css'>
+		<!-- Hoja de estilos en el HTML -->
+		<style>
+			etiqueta{
+				atributo:valor;
+			}
+			#id{
+				atributo:valor;
+			}
+			.class{
+				atributo:valor;
+			}
+		</style>
+		<!-- Javascript en un link externo: Jquery -->
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<!-- Javascript en un link -->
+		<script type="text/javascript" src="javascript.js"></script>
+		<!-- Javascript en el HTML -->
+		<script type="text/javascript">
+			console.log('Esto es Javascript dentro del HTML');
+		</script>
 	</head>
-	<!-- Contenido HTML -->
 	<body>
-		<!-- Cabecera -->
 		<header>
-			<figure id="logo">
+			<!-- Hoja de estilos en la etiqueta HTML -->
+			<figure id="logo" style="margin: 0;">
 				<img src="https://yahoov4s1-a.akamaihd.net/sj/2196/2358758936_c928ef7401.jpg" />
 			</figure>
 			<h1>Curso de Frontend</h1>
-			<!-- Menu de navegación -->
-			<nav>
-				<li><a href="#">HTML</a></li>
-				<li><a href="#">CSS</a></li>
-				<li><a href="#">Backbone</a></li>
-				<li><a href="#">Django</a></li>
-				<li><a href="#">Node.js</a></li>
-			</nav>
 		</header>
-		<!-- Contenido -->
+		<nav>
+			<li><a href="#">HTML</a></li>
+			<li><a href="#">CSS</a></li>
+			<li><a href="#">Backbone</a></li>
+			<li><a href="#">Django</a></li>
+			<li><a href="#">Node.js</a></li>
+		</nav>
 		<section>
-			<!-- Articulo -->
+			<article class="item">
+				<figure class="figure_item">
+					<img src="http://farm5.staticflickr.com/4054/4514904944_c03254f204_z.jpg" />
+				</figure>
+				<h2 class="title_item">
+					<a href="#">Título</a>
+				</h2>
+				<div class="data_item">
+					<span>Texto descriptivo</span>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="figure_item">
+					<img src="http://farm5.staticflickr.com/4054/4514904944_c03254f204_z.jpg" />
+				</figure>
+				<h2 class="title_item">
+					<a href="#">Título</a>
+				</h2>
+				<div class="data_item">
+					<span>Texto descriptivo</span>
+				</div>
+			</article>
+			<article class="item">
+				<figure class="figure_item">
+					<img src="http://farm5.staticflickr.com/4054/4514904944_c03254f204_z.jpg" />
+				</figure>
+				<h2 class="title_item">
+					<a href="#">Título</a>
+				</h2>
+				<div class="data_item">
+					<span>Texto descriptivo</span>
+				</div>
+			</article>
 			<article class="item">
 				<figure class="figure_item">
 					<img src="http://farm5.staticflickr.com/4054/4514904944_c03254f204_z.jpg" />
@@ -44,7 +91,6 @@
 				</div>
 			</article>
 		</section>
-		<!-- Pie de pagina -->
 		<footer>
 			<strong>Mejorando.la</strong>
 			<p>Texto de parrafo</p>
