--- a/index.html
+++ b/index.html
@@ -2,14 +2,92 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Esto va ser un blog en Foundation</title>
+	<link rel="stylesheet" href="foundation/css/foundation.css" />
+    <script src="foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
-	<section>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur hic corrupti blanditiis illo in maiores officia est temporibus dolore animi ut aliquid asperiores nesciunt?
+	<header class="row">
+		<h1>
+			Esto es un blog en foundation
+		</h1>
+		<nav class="top-bar" data-topbar>
+  			<ul class="title-area">
+    			<li class="name">
+      				<h1><a href="#">My Site</a></h1>
+    			</li>
+     			<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    			<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+ 			</ul>
+
+  			<section class="top-bar-section">
+    		<!-- Right Nav Section -->
+    			<ul class="right">
+      				<li class="active"><a href="#">Right Button Active</a></li>
+      				<li class="has-dropdown">
+        				<a href="#">Right Button Dropdown</a>
+        				<ul class="dropdown">
+          					<li><a href="#">First link in dropdown</a></li>
+        				</ul>
+      				</li>
+    			</ul>
+
+    		<!-- Left Nav Section -->
+    			<ul class="left">
+      				<li><a href="#">Left Nav Button</a></li>
+    			</ul>
+  			</section>
+		</nav>
+	</header>
+	<section class="row">
+		<section class="small-12 medium-8 large-7 columns">
+			<article class="row panel">
+				<h2>título del post</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur hic corrupti blanditiis illo in maiores officia est temporibus dolore animi ut aliquid asperiores nesciunt?
+				</p>
+				<a class="button radius round">Ir al Post</a>
+			</article>
+			<article class="row panel">
+				<h2>título del post</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur hic corrupti blanditiis illo in maiores officia est temporibus dolore animi ut aliquid asperiores nesciunt?
+				</p>
+				<a class="button small">Ir al Post</a>
+				<a class="button medium">Ir al Post</a>
+				<a class="button large">Ir al Post</a>
+			</article>
+		</section>
+		<section class="small-12 medium-4 large-4 columns">
+			<section class="row" data-equalizer>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur						
+				</article>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur hic corrupti blanditiis illo in maiores officia est temporibus dolore animi ut aliquid asperiores nesciunt?
+				</article>
+				
+			</section>
+			<section class="row" data-equalizer> <!-- esto hace padre para nivelar las columnas en tamaño a las hijas -->
+				<article class="small-6 columns panel" data-equalizer-watch><!-- hijas -->
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur
+				</article>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quis, dolorum, itaque maxime quasi aspernatur hic corrupti blanditiis illo in maiores officia est temporibus dolore animi ut aliquid asperiores nesciunt?
+				</article>
+				
+			</section>
+			
+		</section>
 	</section>
-	<section>
+<!-- 	<section class="row">
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, veniam, ipsa, modi quisquam iste eaque vel ipsum sunt porro beatae eligendi ducimus nemo natus atque nulla repellat deleniti at provident!
-	</section>
+	</section> -->
+	<script src="foundation/js/vendor/jquery.js"></script>
+    <script src="foundation/js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
 </body>
 </html>
